# Meta_hackton

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
meta_grid_env/: __init__.py  client.py  graders.py  models.py  tasks.py
meta_grid_env/server/: app.py  grid_environment.py
server/: app.py
