[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-hackathon-scaler"
version = "0.1.0"
description = "Smart electricity load balancer simulator for Indian city power operations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "openai>=1.50.0",
  "pydantic>=2.9.0",
  "uvicorn>=0.30.0",
]

[tool.setuptools]
packages = ["meta_grid_env", "meta_grid_env.server"]
